--- a/PChem/PChem.vcxproj.filters
+++ b/PChem/PChem.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="atomList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cleaning.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="structures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="singlePDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cleaning.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
